[tool.poetry]
name = "fastapi-github-project"
version = "0.1.0"
description = ""
authors = ["Rafal Klimuntowski <klimuntowski.rafal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.2"
sqlalchemy = "1.4.42"
databases = "^0.8.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
